<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstButtonRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.96">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/button8"
            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintTop_toTopOf="@id/button7"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            app:layout_constraintStart_toEndOf="@id/marginEndButton7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/button9"
            app:layout_constraintStart_toEndOf="@id/button8"
            app:layout_constraintTop_toTopOf="@id/button7"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            app:layout_constraintStart_toEndOf="@id/marginEndButton8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button9"
            app:layout_constraintTop_toTopOf="@id/button7"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/division_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/marginEndButton9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstRowBottomMargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/firstButtonRowLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondButtonRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstRowBottomMargin"
        app:layout_constraintWidth_percent="0.96">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            app:layout_constraintStart_toEndOf="@id/marginEndButton4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            app:layout_constraintStart_toEndOf="@id/marginEndButton5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/marginEndButton6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondRowBottomMargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/secondButtonRowLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thirdButtonRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondRowBottomMargin"
        app:layout_constraintWidth_percent="0.96">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_constraintStart_toEndOf="@id/marginEndButton1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            app:layout_constraintStart_toEndOf="@id/marginEndButton2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/marginEndButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thirdRowBottomMargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/thirdButtonRowLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fourthButtonRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdRowBottomMargin"
        app:layout_constraintWidth_percent="0.96">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButton0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/button0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/point"
            app:layout_constraintStart_toEndOf="@id/marginEndButton0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButtonPoint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/buttonPoint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            app:layout_constraintStart_toEndOf="@id/marginEndButtonPoint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/marginEndButtonEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/buttonEquals"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.07" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/marginEndButtonEquals"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1975" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fourthRowBottomMargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fourthButtonRowLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fifthButtonRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourthRowBottomMargin"
        app:layout_constraintWidth_percent="0.92">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/neg"
            app:layout_constraintEnd_toStartOf="@id/clearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.45" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            app:layout_constraintBaseline_toBaselineOf="@id/negButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/negButton"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>